--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,13 +11,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  video_player: ^2.0.0
-  wakelock: ^0.4.0
+  video_player: ^2.0.2
+  wakelock: ^0.5.0+2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  lint: ^1.5.1
+  lint: ^1.5.3
 
 flutter:
   uses-material-design: true
